fix: truncate smartbridge by setting max widths

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -391,6 +391,29 @@ thead th {
   @apply .flex .items-center .justify-center
 }
 
-.word-break-words {
-  word-break: break-word;
+.cell-smartbridge-word-break {
+  max-width: 76px;
+  @apply .truncate
+}
+
+.cell-smartbridge {
+  @apply .hidden
+}
+
+@media only screen and (min-width: 1100px) {
+  .cell-smartbridge {
+    @apply .table-cell
+  }
+}
+
+@media only screen and (min-width: 1150px) {
+  .cell-smartbridge-word-break {
+    max-width: 110px;
+  }
+}
+
+@media only screen and (min-width: 1215px) {
+  .cell-smartbridge-word-break {
+    max-width: 180px;
+  }
 }
